fixed flickering bug

--- a/src/renderer/scss/main.scss
+++ b/src/renderer/scss/main.scss
@@ -159,6 +159,7 @@ a {
 
 #main-content-wrapper {
     padding-left: 2.5rem;
+    width: calc(100% - #{$sidebar-width})
 }
 
 /* main content  */
